--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
   url_launcher: ^6.3.1
+  flutter_vlc_player: ^7.4.2
 
 dev_dependencies:
   flutter_test:
