--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   url_launcher: ^6.3.1
   flutter_vlc_player: ^7.4.2
+  pinput: ^5.0.1
 
 dev_dependencies:
   flutter_test:
