--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   provider: ^6.1.5
   flutter_launcher_icons: ^0.14.4
   video_player: ^2.10.0
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
