--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   video_player: ^2.10.0
   fluttertoast: ^8.2.12
+  firebase_core: ^3.14.0
+  firebase_analytics: ^11.5.0
 
 dev_dependencies:
   flutter_test:
