--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   video_player: ^2.10.0
   fluttertoast: ^8.2.12
   firebase_core: ^3.14.0
-  firebase_analytics: ^11.5.0
+  firebase_analytics: 11.0.0
 
 dev_dependencies:
   flutter_test:
