--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
   url_launcher: ^6.3.1
-  flutter_vlc_player: ^7.4.2
+  flutter_vlc_player: ^7.4.3
   pinput: ^5.0.1
   http: ^1.4.0
   provider: ^6.1.5
@@ -50,6 +50,8 @@ dependencies:
   fluttertoast: ^8.2.12
   firebase_core: ^3.14.0
   firebase_analytics: 11.0.0
+  shared_preferences: ^2.5.3
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
