feat: changed the login binding to accept email instead of username after proper validation and send the device id for device tracking

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_analytics: 11.0.0
   shared_preferences: ^2.5.3
   email_validator: ^3.0.0
+  mobile_device_identifier: ^0.0.3
 
 dev_dependencies:
   flutter_test:
